Optimize tantivy index, remove Lucene code, update test assets